photo now also changes on swipe

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,7 +49,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" defer />
 <script src="{{'lazysizes.min.js' | asset_url}}" async=""></script>
 
-
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     {% include 'ajax-cart-template' %}
     <script async>
       jQuery(function($) {
