clears the console errors, swaps from a cdn to a local file, removes a line of css that was for an old theme

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -546,6 +546,9 @@ body section #shaver.rotate { transform: rotate(-10deg); }
   margin-top: 5px;
     margin-right: 10px;
 }
+#featured_image {
+  touch-action: none;
+}
 #quantity-wrapper .additional-label { width: 25%; }
 #product .additional-label {
     color: #d1cdcd ;
@@ -903,10 +906,7 @@ body .additional-checkout-button {
   background-color: white;
   z-index: 9999;
   border-left: 1px solid  #F9F7F7;
-  background-image: url("{{'Pairs-04.svg' | asset_url}}"); 
-  background-position: -65px bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
+  
       width: 45%;
     min-width: 320px;
     max-width: 450px;
