--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -45,12 +45,10 @@
     <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
     <script src="{{ 'handlebars.min.js' | asset_url }}" defer></script>
     <script src="{{ 'jquery.easing.1.3.min.js' | asset_url }}" defer></script>
-    <script src="{{'jquery.mobile.custom.min.js' | asset_url}}" defer></script> 
+    <script src="{{'jquery.mobile.custom.min.js' | asset_url}}"></script> 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" defer />
 <script src="{{'lazysizes.min.js' | asset_url}}" async=""></script>
 
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     {% include 'ajax-cart-template' %}
     <script async>
       jQuery(function($) {
