--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -671,18 +671,23 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 .color.swatch-element label { padding:0; }
 /* Styling selected swatch */
 /* Slightly raised */
-.swatch .color input:checked + label {
-  -webkit-box-shadow:0px 1px 2px rgba(0,0,0,0.8);
-  -moz-box-shadow:0px 1px 2px rgba(0,0,0,0.8);
-  box-shadow:0px 1px 2px rgba(0,0,0,0.8);
-  border-color:transparent;
+.swatch .color input:checked + .color-padding {
+    border: 1px solid #d1cdcd;
+
 } 
+
+.color-padding {
+    padding: 3px;
+    height: 27px;
+    border-radius: 100%;
+    vertical-align: middle;
+}
 .swatch .swatch-element.color {
 
   -webkit-transform:translateZ(0); /* webkit flicker fix */
   -webkit-font-smoothing:antialiased; /* webkit text rendering fix */
   /* Spacing between buttons */
-  margin:0px 10px 0 0;
+  margin:0px 5px 0 0;
   /* To position the sold out graphic and tooltip */
   position:relative;
 }
@@ -1006,6 +1011,8 @@ table td, table th { padding: 15px; }
     min-width: 300px;
     max-width: 600px;
 }
+
+
 
 #newsletter_popup2 .klaviyo_header_close {
     position: absolute;
