--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -59,15 +59,11 @@
         {% endif %}
         <input id="swatch-{{ option_index }}-{{ value | handle }}" type="radio" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.index == 2 %}checked="checked"{% endif %} {% unless variant.available %}disabled{% endunless %} />
         {% if is_color %}
-        	{% if value != "Nude" %}
+        <div class="color-padding">
         		<label for="swatch-{{ option_index }}-{{ value | handle }}" style="background-color: {{ value | split: ' ' | last | handle }} !important; background-image: url({{ value | handle | append: '.' | append: file_extension | asset_url }})">
           		  <img class="crossed-out" src="{{ 'soldout.png' | asset_url }}" />
         		</label>
-        	{% else %}
-              <label for="swatch-{{ option_index }}-{{ value | handle }}" style="background-color: tan !important; background-image: url({{ value | handle | append: '.' | append: file_extension | asset_url }})">
-          		<img class="crossed-out" src="{{ 'soldout.png' | asset_url }}" />
-        	  </label>
-       		{% endif %}
+        </div>
         {% else %}
         <label for="swatch-{{ option_index }}-{{ value | handle }}">
           {{ value }}
