thank baby jesus, desktop product pages are done. This is some sizing cleanup to make everything evenly spaced and line up with everything else

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -541,6 +541,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
   background-size: 50%;
   background-repeat: no-repeat;
 }
+#form-wrapper { max-width: 500px; margin: 0 auto; }
 .small .additional-label {
   float: left;
   margin-top: 5px;
@@ -557,7 +558,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     border: 1px solid #d1cdcd;
     border-radius: 80px;
     width: 60%;
-    margin: 20px 10px 0 23px;
+    margin: 20px 10px 0 0;
     display: inline-block;
     vertical-align: middle;
 }
@@ -569,7 +570,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
   width: 40%; 
   border: 1px solid #d1cdcd;
   border-radius: 80px;
-      margin: 20px 25px 0 0;
+      margin: 20px 0 0 0;
   height: 48px;
   justify-content: center;
   vertical-align: middle;
@@ -594,9 +595,9 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 .right-arrow { transform: rotate(90deg); }
 .add-to-cart {
     padding: 15px;
-    width: 92%;
+    width: 100%;
     border-radius: 80px;
-    margin: 20px 20px 0 20px;
+    margin: 20px 0 0 0;
     box-sizing: border-box;
 }
 .add-to-cart  span {
