--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -147,9 +147,47 @@
 </script>
 {% endif %}
    <section class="product-benefits background-blue flex-container double-padding-tbo">
-    <div class="third">
+    <div class="mo fw">
+      <div class="tac accent-padding">
+        <img src="{{'crown.png' | asset_url}}" class="icon" />
+        <h4 class="nm">Soft as Cashmere</h4>
+        <p>Our luxurious and rare alpaca fleece comes<br> straight from their native Incan lands of Peru.</p>
+      </div>
+      <div class="tac accent-padding">
+        <img src="{{'flame.png' | asset_url}}" class="icon" />
+        <h4 class="nm">Warmer than Wool</h4>
+        <p>Alpaca fibers are completely hollow, which<br> enable them to trap  more heat than sheep wool.</p>
+      </div>
+      <div class="tac accent-padding">
+        <img src="{{'water.png' | asset_url}}" class="icon" />
+        <h4 class="nm">Thermoregulating & Waterproof</h4>
+        <p>Alpaca fibers have a hollow core, allowing their<br> fleece to provide insulation and wick moisture.</p>
+      </div>
+        <div class="tac accent-padding" id="no-itch">
+          <img src="{{'poof.png' | asset_url}}" class="icon" />
+          <h4 class="nm">Non-itchy & Hypoallergenic</h4>
+          <p>Alpaca fleece is naturally smooth and short, with<br> no grease, providing the ultimate comfort.</p>
+        </div>
+    <div class="flex-container-no">
+      <div class="half-no">
+      </div>
+      <div class="half-no">
+        <div class="tac accent-padding">
+          <img src="{{'leaf.png' | asset_url}}" class="icon" />
+          <h4 class="nm">Eco-friendly & Sustainable</h4>
+          <p>Alpacas step lightly on soil and graze on native grasses, which reduces environmental impact.</p>
+        </div>
+          <div class="tac accent-padding">
+          <img src="{{'ribbon.png' | asset_url}}" class="icon" />
+          <h4 class="nm">Gives Back</h4>
+          <p>A percentage of every purchase goes towards dressing pediatric cancer patients in hospitals.</p>
+        </div>
+      </div>
     </div>
-    <div class="two-thirds">
+</div>
+    <div class="third do">
+    </div>
+    <div class="two-thirds do">
       <div class="flex-container">
         <div class="tac half">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
