--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -273,7 +273,7 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
   background: white;
       z-index: 999;
     margin-top: -1px;
- box-shadow: 0 0 3px 0 rgba(0,0,0,.3);
+box-shadow: 0px 1px 5px 0px rgba(0,0,0,.3);
 }
 
 #hamburger {
@@ -1034,16 +1034,28 @@ table .lg { background-color: #d1cdcd; }
     min-width: 300px;
     max-width: 600px;
 }
-
-
-
 #newsletter_popup2 .klaviyo_header_close {
     position: absolute;
     right: calc( 1% + 10px);
     top: 10px;
 }
 
-
+/*contact us */
+.contact_input {
+    padding: 15px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    font-size: 12pt;
+}
+#contact-submit-wrapper {
+    padding: 15px;
+    background: gray;
+    border-radius: 20px;
+}
+#contact-submit-wrapper input {
+    font-size: 12pt;
+    color: white;
+}
 
 
 
