--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,40 +1,40 @@
+<style>
+nav { 
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,.3); 
+  background: white;
+}
+</style>    
+
     <main id="page" class="contact-us">	     
-	    <section class="background-green tac text-white page-header">
-          <h1>{{ page.title }}</h1>
-      	</section>
-      	<section class="flex-container index-padding">
-        <div class="half">
-          <div class="title-border"></div>
-          <h2>Our customer service<br> goal is simple:</h2>
+      <section class="flex-container index-padding">
+        <div class="half double-padding">
+          <h3 class="nm">Contact Us</h3>
+          <p>Our customer service goal is simple:</p>
           <p>We are committed to responding to your inquiries in a timely fashion and providing a positive customer service experience.</p>
           <p>Questions, comments or suggestions, we would be delighted to hear from you!</p>
-          <h3 class="text-green">drop us a note: <br> <a href="mailto:gosockless@mygekks.com" class="text-green">gosockless@mygekks.com</a></h3>
+          <p>drop us a note: <br> <a href="mailto:support@pacas.us">support@pacas.us</a></p>
         </div>
-        <div class="half">
+        <div class="half double-padding">
           {% form 'contact' %}
           {% if form.posted_successfully? %}
-          <p class="subscript">Thank you for contacting us! We will get back to you as soon as possible.</p>
+            <p class="subscript tac">Thank you for contacting us! We will get back to you as soon as possible.</p>
           {% endif %}
           {% if form.errors %}
-          <p class="subscript errors">Not all fields have been filled correctly</p>
+            <p class="subscript errors tac">An error occurred, please try again.</p>
           {% endif %}
           <p>
-            <label for="contact_form_name"><h3 class="text-green">name</h3></label>
-            <input type="text" id="contact_form_name" class="contact_input" name="contact[name]" value="{{ form.name }}" />
+            <input type="text" id="contact_form_name" class="contact_input fw border-lightgray" name="contact[name]" value="{{ form.name }}" placeholder="Name" />
           </p>
           <p>
-            <label for="contact_form_email"><h3 class="text-green">email</h3></label>
-            <input type="text" id="contact_form_email" class="contact_input" name="contact[email]" value="{{ form.email }}"/>
+            <input type="text" id="contact_form_email" class="contact_input fw border-lightgray" name="contact[email]" value="{{ form.email }}" placeholder="Email"/>
           </p>
           <p>
-            <label for="contact_form_subject"><h3 class="text-green">subject</h3></label>
-            <input type="text" id="contact_form_subject" class="contact_input" name="contact[subject]" value="{{ form.subject }}"/>
+            <input type="text" id="contact_form_subject" class="contact_input fw border-lightgray" name="contact[subject]" value="{{ form.subject }}" placeholder="Subject"/>
           </p>
           <p>
-            <label for="contact_message"><h3 class="text-green">message</h3></label>
-            <textarea id="contact_message" name="contact[body]" rows="5">{{ form.body }}</textarea>
+            <textarea id="contact_message" placeholder="Message" class='border-lightgray fw contact_input' name="contact[body]" rows="5">{{ form.body }}</textarea>
           </p>
-          <div class="tar">
+          <div class="tac" id="contact-submit-wrapper">
           	<input type="submit" value="Send Email">
           </div>
           {% endform %}
