updates the contact form to be mobile responsive

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -211,6 +211,7 @@ table td, table th { padding: 10px; }
 
 }
 @media only screen and (max-width: 588px) {
+  #contact-form-half { padding-top: 0; }
 table td, table th { padding: 5px; }
   h2 { font-size: 16pt; } 
   h4 { font-size: 12pt; }
@@ -273,7 +274,7 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
   background: white;
       z-index: 999;
     margin-top: -1px;
-box-shadow: 0px 1px 5px 0px rgba(0,0,0,.3);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
 }
 
 #hamburger {
@@ -1045,7 +1046,7 @@ table .lg { background-color: #d1cdcd; }
     padding: 15px;
     border-radius: 20px;
     box-sizing: border-box;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 #contact-submit-wrapper {
     padding: 15px;
@@ -1053,7 +1054,7 @@ table .lg { background-color: #d1cdcd; }
     border-radius: 20px;
 }
 #contact-submit-wrapper input {
-    font-size: 12pt;
+    font-size: 10pt;
     color: white;
 }
 
