--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,7 +1,7 @@
 <style>
-nav { 
-  box-shadow: 0px 1px 5px 0px rgba(0,0,0,.3); 
-  background: white;
+nav {
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
+    background: white;
 }
 </style>    
 
@@ -14,7 +14,7 @@ nav {
           <p>Questions, comments or suggestions, we would be delighted to hear from you!</p>
           <p>drop us a note: <br> <a href="mailto:support@pacas.us">support@pacas.us</a></p>
         </div>
-        <div class="half double-padding">
+        <div class="half double-padding" id="contact-form-half">
           {% form 'contact' %}
           {% if form.posted_successfully? %}
             <p class="subscript tac">Thank you for contacting us! We will get back to you as soon as possible.</p>
