adds in additional icons

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -398,6 +398,7 @@ footer form {
   box-sizing: border-box;
 
  }
+ #index .flex-container-no .icon { margin-right: 10px; }
 .sock-preview img {
     width: 80%;
     margin: 0 auto;
