--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,4 +1,4 @@
-<main>
+<main id="index">
 <section class="page-header" id="atf">
   <div id="header-spreader">
   <h1 class="ttu nm"><em>Cozy Fleece</em></h1>
@@ -29,26 +29,36 @@
       </div>
     </div>
    <div class="half">
-    <p class="tac">We've curated the perfect alpaca blends to create Paca socks for all your casual and dress needs</p>
+    <p class="tac">Here at Pacas, we've curated the perfect alpaca blends to create Paca socks for all your athletic, casual, and dress needs</p>
     <div class="accent-padding">
       <div class="flex-container jcc ">
-        <div class="tac half">
+        <div class="half flex-container-no">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
           <p class="subscript"><b>Soft as Cashmere</b></p>
         </div>
-        <div class="tac half">
-          <img src="{{'leaf.png' | asset_url}}" class="icon" />
-          <p class="subscript"><b>Greenest Fiber</b></p>
+        <div class="half flex-container-no">
+          <img src="{{'poof.png' | asset_url}}" class="icon" />
+          <p class="subscript"><b>Non-itchy & Hypoallergenic</b></p>
         </div>
       </div>
       <div class="flex-container jcc">
-        <div class="tac half">
+        <div class="half flex-container-no">
           <img src="{{'flame.png' | asset_url}}" class="icon" />
           <p class="subscript"><b>Warmer than Wool</b></p>
         </div>
-        <div class="tac half">
+        <div class="half flex-container-no">
+          <img src="{{'leaf.png' | asset_url }}" class="icon" />
+          <p class="subscript"><b>Eco-friendly & Natural</b></p>
+        </div>
+      </div>
+      <div class="flex-container jcc">
+        <div class="half flex-container-no">
           <img src="{{'ribbon.png' | asset_url }}" class="icon" />
           <p class="subscript"><b>Gives Back</b></p>
+        </div> 
+        <div class="half flex-container-no">
+          <img src="{{'water.png' | asset_url}}" class="icon" />
+          <p class="subscript"><b>Thermoregulating & Waterproof</b></p>
         </div>
       </div>
     </div>
@@ -65,7 +75,7 @@
       </div>
       <div class="flex-container-no">
         <img src="{{'leaf.png' | asset_url}}" class="icon" />
-        <p class="subscript"><b>Greenest Fiber</b></p>
+        <p class="subscript"><b>Eco-friendly & Natural</b></p>
       </div>
       <div class="flex-container-no">
         <img src="{{'flame.png' | asset_url}}" class="icon" />
@@ -75,6 +85,14 @@
        <img src="{{'ribbon.png' | asset_url }}" class="icon" />
        <p class="subscript"><b>Gives Back</b></p>
       </div>
+       <div class="half flex-container-no">
+          <img src="{{'poof.png' | asset_url}}" class="icon" />
+          <p class="subscript"><b>Non-itchy & Hypoallergenic</b></p>
+        </div>
+          <div class="half flex-container-no">
+          <img src="{{'water.png' | asset_url}}" class="icon" />
+          <p class="subscript"><b>Thermoregulating & Waterproof</b></p>
+        </div>
     </div>
   </div>
     <div class="flex-container-no jes">
@@ -99,7 +117,7 @@
     <h3 class="nmt">Give the Gift of Comfort and Warmth</h3>
     <p class="nmt">Percentage of profits are used to dress pediatric cancer patients in hospitals. We make you warm, you make them warm.</p>
     <div class="button ib" id="learn-cta">
-      <p class="nm">Learn More</p>
+      <a href="/pages/our-story"><p class="nm">Learn More</p></a>
     </div>
   </div>
 </section>
