links links on homepage to actual pages now that they exist

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -13,9 +13,9 @@
 <section class="page-header tac" id="fresh">
   <h2 class="text-white accent">Shop</h2>
   <div class="flex-container-no jes">
-    <p class="text-white"><b>Men</b></p>
-    <p class="text-white"><b>Women</b></p>
-    <p class="text-white"><b>Kids</b></p>
+    <a href="/collections/mens"><p class="text-white"><b>Men</b></p></a>
+    <a href="/collections/womens"><p class="text-white"><b>Women</b></p></a>
+    <a href="/collections/kids"><p class="text-white"><b>Kids</b></p></a>
   </div>
 </section>
 <section class="page-header do">
