--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -43,7 +43,7 @@
     <script src="{{  'option_selection.js' | shopify_asset_url }}" defer></script>
     <script src="{{ 'ajax-cart.js'  | asset_url }}" defer></script>
     <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
-    <script src="{{ 'handlebars.min.js' | asset_url }}" defer></script>
+    <script src="{{ 'handlebars.min.js' | asset_url }}"></script>
     <script src="{{ 'jquery.easing.1.3.min.js' | asset_url }}" defer></script>
     <script src="{{'jquery.mobile.custom.min.js' | asset_url}}"></script> 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" defer />
