--- a/snippets/ajax-cart-template.liquid
+++ b/snippets/ajax-cart-template.liquid
@@ -3,23 +3,36 @@
  <script id="CartTemplate" type="text/template">
 {% raw %}
 <section class="accent-padding">
-  <a href="/cart"><h3 class="tac accent">Your Cart</h3></a>
-  <h3 id="close-cart" onclick="cartClose();">✕</h3>
-  <form action="/cart" method="post" novalidate class="border-lightgray ajaxcart  accent-padding">
+  {% endraw %}
+  <img src="{{'close-arrow.png' | asset_url}}" class="icon" id="close-cart" onclick="cartClose();">
+  <h3 class="tac accent">Your Cart</h3>
+  <a href="/cart"><img src="{{'cart.png' | asset_url}}" class="icon" id="go-to-cart"/></a>
+  {% raw %}
+  <form action="/cart" method="post" novalidate class="ajaxcart">
     <div id="product-wrap">
       {{#items}}
-      <div class="flex-container-no">
-        <div class="accent-padding">
+      <div class="flex-container-no border-bottom-gray">
+        <div class="">
           <a href="{{url}}" class="ajaxcart__product-image">
             <img src="{{img}}" alt="">
           </a>
         </div>
-        <div class="accent-padding">
-          <p class="nmb"><a href="{{url}}"class="ajaxcart__product-name" style="text-transform: none;">{{name}}</a></p>
+        <div class="accent-padding fw">
+          <p class="nmb"><a href="{{url}}"class="ajaxcart__product-name">{{name}}</a></p>
           {{#if variation}}
-          <p class="nm"><span>{{{linePrice}}}</span></p>
-          <p class="ajaxcart__product-meta nm subscript nm" style="text-transform: lowercase">{{variation}}</p>
-          <p class="nmt subscript">Quantity: {{itemQty}}</p>
+          <p class="ajaxcart__product-meta subscript">{{{splitTitle variation}}}</p>
+          <div class="flex-container-no jsb">
+            <div class="ajaxcart__qty">
+              <button type="button" class="ajaxcart__qty-adjust ajaxcart__qty--minus icon-fallback-text" data-id="{{key}}" data-qty="{{itemMinus}}" data-line="{{line}}">
+                <span class="icon icon-minus" aria-hidden="true">−</span>                  
+              </button>
+              <input type="text" name="updates[]" class=" tac ajaxcart__qty-num" value="{{itemQty}}" min="0" data-id="{{key}}" data-line="{{line}}" aria-label="quantity" pattern="[0-9]*">
+              <button type="button" class="ajaxcart__qty-adjust ajaxcart__qty--plus icon-fallback-text" data-id="{{key}}" data-line="{{line}}" data-qty="{{itemAdd}}">
+                <span class="icon icon-plus" aria-hidden="true">+</span>
+              </button>
+            </div>
+            <p class="nm"><span>{{{linePrice}}}</span></p>
+          </div>
         </div>
       </div>
             {{/if}}
@@ -34,24 +47,26 @@
             {{/items}}
         </div>
    
-      <div class="ajaxcart__footer index-padding-to">
-        <p>Subtotal: {{{totalPrice}}}</p>
-        <p id="cart-add-ons" class="subscript tac">
-         </p>
+      <div class="ajaxcart__footer">
+        <h4 class="flex-container-no jsb">Subtotal: <span class="tar">{{{totalPrice}}}</span></h4>
 
         {%endraw%}
         {% if additional_checkout_buttons %}
           <div class="additional_checkout_buttons">{{ content_for_additional_checkout_buttons }}</div>
         {% endif %}{% raw %}
-        <button type="submit" class="btn btn--secondary btn--full cart__checkout btn clickable" name="checkout" style="margin-top: 0.5em;">
-          {% endraw %}Checkout{% raw %}
+        <button type="submit" class="add-to-cart btn btn--secondary btn--full cart__checkout btn clickable" name="checkout" style="margin-top: 0.5em;">
+          <span>Checkout</span>
         </button>
-        {% endraw %}
-        <div class="tac">
-          <img src="{{'bow.png' | asset_url}}" class="icon" /><p class="subscript">Want to donate socks? <b>Donate here.</b></p>{% raw %}
-        </div>
       </div>
     </form>
   </section>
   {% endraw %}
+
   </script>
+
+<script>
+  Handlebars.registerHelper('splitTitle', function(title) {
+    var t = title.split(" / ");
+    return "Color: " + t[0] + "<br>Size: " + t[1] ;
+  });
+</script>
