--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -48,7 +48,7 @@
     <script src="{{'jquery.mobile.custom.min.js' | asset_url}}"></script> 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" defer />
 <script src="{{'lazysizes.min.js' | asset_url}}" async=""></script>
-
+    {% include 'klaviyo-pop' %}
     {% include 'ajax-cart-template' %}
     <script async>
       jQuery(function($) {
