--- a/snippets/klaviyo-pop.liquid
+++ b/snippets/klaviyo-pop.liquid
@@ -1,28 +1,22 @@
 <div class="modal" id="newsletter_popup2" style="display:none;">
-  <div class="background-lightgray tac" id="container-news">
-  <form action="//manage.kmail-lists.com/subscriptions/subscribe" method="POST" novalidate="novalidate" class="klaviyo_subscription_form">
-    <input type="hidden" name="g" value="Ai9wnf">
-    <div class="flex-container-no hide_on_submit">
-      <div class="third" style="width: 45%;">
+  <div class="background-pink tac">
+    <p class="nmt klaviyo_header_close tar clickable" style="font-size: 13pt;"><span>✕</span></p>
+    <form action="//manage.kmail-lists.com/subscriptions/subscribe" method="POST" novalidate="novalidate" class="klaviyo_subscription_form double-padding">
+    <input type="hidden" name="g" value="MdrVKk">
+    <div class="hide_on_submit">
+      <h3 class="accent nm">Why, hello!</h3>
+      <h3 class="nm">Get 10% off your first order</h3>
+      <p>Just enter your email below for the coupon code.</p>
+      <input type="email" id="newsletter_popup_$email" class="newsletter_email fw hide_on_submit border-gray" name="email" placeholder="Email">
+      <div class="klaviyo_form_actions hide_on_submit">
+        <button type="submit" class="klaviyo_submit_button fw"><span>let's go!</span></button> 
       </div>
-      <div class="two-thirds accent-padding">
-        <p class="nmt klaviyo_header_close tar clickable" style="font-size: 13pt;"><span>✕</span></p>
-       <div class="accent-padding border-white">
-          <h2 class="text-green nm">$12 Gekks!</h2>
-        </div>
-        <p class="hide_on_submit"><span class="text-green">Enter your information to instantly unlock a discount for $12 Gekks</span></p>
-        
-        <input type="email" id="newsletter_popup_$email" class="newsletter_email hide_on_submit" name="email">
-        <div class="klaviyo_form_actions hide_on_submit">
-          <button type="submit" class="klaviyo_submit_button"><span>let's go!</span></button> 
-        </div>
-        <p class="text-green hide_on_submit">Stay in the know with <br><b>exclusive deals</b></p>
         <div class="error_message subscript" style="display: none;"></div> 
       </div>
-    </div>
    </form>
    <p class='nm klaviyo_header_close tar clickable accent-padding' id="success-close" style="display: none;">✕</p>
     <div class="success_message"></div>
+    <img src="{{'pop-paca.png' | asset_url}}" />
   </div>
 </div> 
  
